# regulAItor

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml  multistage.Dockerfile  pyproject.toml
Framework/: README.md  config.py  main.py  state_machine_controller.py
crawlers/: fda_warning_link_spider.py
crawlers/crawlers/: settings.py
crawlers/crawlers/spiders/: warning_letter_contents_spider.py
report-agent/: generate_report_table.py
report-agent/documents/: fda_generated_report_with_table.docx  fda_template_with_table.docx
scripts/: run_dashboard.bash
src/Framework/: OAI_CONFIG_LIST  README.md  config.py  main.py  main_1.py  main_streamlit.py  orchestrator.py  rag_agent.py  settings.py  state_machine_controller.py
src/Framework/RAG/: README.md  fda_warning_letter_system.py  regulation_content_agent.py  regulation_extraction_agent.py
src/Framework/agents/: FDAWarningLetterValidator.py  Initiating_agent.py  agent_manager.py  conversation_workflow.py  corrective_action_agent.py  corrective_action_validation_agent.py  input_validation_agent.py  recommendation_agent.py  regulation_content_agent.py  regulation_extraction_agent.py  similar_case_agent.py  similarity_search_agent.py  validation_agent.py  violation_extraction_agent.py
src/Framework/data/: violations_data.json
src/Framework/templates/: index.html  result.html  reupload.html
src/Framework/utils/: message_queue.py
src/crawlers/: .gitignore  README.md
src/crawlers/crawlers/: .gitignore  items.py  pipelines.py  settings.py
src/data/: config.py  main.py  models.py  processor.py  rate_limiter.py  summary_dashboard.py
src/data/Filtered_2/: 4e-global-sapi-de-cv-608940-10232020.txt  8046255-canada-inc-dba-viatrexx-596178-06112020.txt  abraxis-bioscience-llc-633713-10312022.txt  accu-bio-chem-laboratories-619450-02242022.txt  accupack-midwest-inc-680228-08152024.txt  acella-pharmaceuticals-llc-604438-08142020.txt  acino-products-llc-589471-02102020.txt  actavis-laboratories-fl-inc-567857-02012019.txt  advanced-botanical-consulting-testing-inc-dba-abc-testing-572991-06042019.txt  advanced-nutriceuticals-llc-dba-guyer-institute-molecular-medicine-615908-11102021.txt  aerosol-and-liquid-packaging-inc-676746-07242024.txt  ag-hair-limited-638646-11282022.txt  agropharma-laboratories-inc-623475-03252022.txt  aire-master-america-inc-622546-05232022.txt  (+175 more)
src/regulaitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/template/: laboratoires-clarins-568157-04232019.txt
test/warning_letter/: FDA_483_warning_letter_response_templates_greenlight_guru.docx
(+360 files in other folders)
