[project]
name = "regulaitor"
version = "0.1.0"
description = "Stay in compliance with the power of AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "scrapy-playwright>=0.0.41",
  "scrapy>=2.11.2",
  "pyautogen>=0.2",
  "sentence_transformers>=2.2.2",
  "streamlit>=1.41.0",
  "watchdog>=6.0.0",
  "python-dotenv>=1.0.1",
  "openai>=1.56.1",
  "python-docx>=1.1.2",
  "dspy>=2.5.43",
  "requests>=2.32.3",
  "flask>=3.1.0",
  "pypdf>=5.1.0",
  "markdownify>=0.14.1",
  "chromadb>=0.5.23",
  "ipython>=8.30.0",
  "flaml>=2.3.2",
  "qdrant-client>=1.12.1",
  "tenacity>=9.0.0",
]


[dependency-groups]
dev = ["black>=24.10.0", "isort>=5.13.2"]
